[기능] Checkout Session 업데이트 기능 구현 및 문서 현행화
1. Checkout Flow 고도화
   - 세션 업데이트 기능 구현: POST /checkout_sessions/{id}
   - UpdateCheckoutSessionRequest 모델 추가 (acp-shared)
   - CheckoutService.updateSession: 아이템 수량, 배송지 변경 시 가격/세금 자동 재계산 로직 추가
   - CheckoutSession 도메인 모델에 updatedAt 필드 추가 및 상태 관리 로직 보강

2. 테스트 및 빌드 안정화
   - CheckoutIntegrationTest: 세션 업데이트 및 가격 재계산 검증 테스트 케이스 추가
   - 테스트 환경 설정 보강: psp.base-url, cafe24.mall-id 등 필수 프로퍼티 추가 (application.yml)
   - Java Agent 경고 제거: build.gradle.kts 테스트 태스크 설정 수정

3. 문서 업데이트
   - STATUS.md: Flyway/FK 제거, 세션 업데이트 구현 완료 등 최신 현황 반영